--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": "true",
   "type": "module",
   "scripts": {
-    "start": "npm run serve-www",
-    "serve-www-and-db": "npm run serve-db & npm run serve-www",
-    "serve-www": "node ./serve-www.js",
+    "start": "npm run serve-docs",
+    "serve-docs-and-db": "npm run serve-db & npm run serve-docs",
+    "serve-docs": "node ./serve-docs.js",
     "prettier": "npx prettier --write .",
-    "serve-python": "python3 -m http.server --directory ./www",
-    "serve-php": "php -S localhost:8000 -t './www'",
+    "serve-python": "python3 -m http.server --directory ./docs",
+    "serve-php": "php -S localhost:8000 -t './docs'",
     "serve-db": "npx json-server --port 3001 ./data/db.json"
   },
   "prettier": {
@@ -23,6 +23,6 @@
     "semi": true
   },
   "devDependencies": {
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.2"
   }
 }
